--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,6 +86,11 @@ a.navbar-item:hover {
 	position: relative;
 }
 
+.flip-card-front,
+.flip-card-back {
+	min-height: 400px;
+}
+
 .cards-service p.title {
 	font-size: 32px;
 	font-weight: 500;
@@ -131,6 +136,12 @@ a.navbar-item:hover {
 	height: 100%;
 }
 
+.cards-service:hover .cta > a,
+.cta > a {
+	position: relative;
+	color: #ffffff;
+}
+
 .cards-service:hover p,
 .cards-service:hover li {
 	color: #ffffff;
@@ -166,8 +177,8 @@ a.navbar-item:hover {
 }
 
 .colorful {
-	background-color: #4D8FC4!important;
-	color: #ffffff!important;
+	background-color: #4D8FC4 !important;
+	color: #ffffff !important;
 }
 
 /* #footer {
@@ -758,8 +769,13 @@ div.bottom-links {
 		font-size: 48px;
 	}
 
-	.cards-service {
+	.cards-service  {
 		min-height: 240px;
+	}
+
+	.flip-card-front,
+	.flip-card-back  {
+		min-height: 176px;
 	}
 
 	.cards-service p.title {
@@ -817,6 +833,11 @@ div.bottom-links {
 
 	.cards-service {
 		min-height: 560px;
+	}
+	
+	.flip-card-front,
+	.flip-card-back {
+		min-height: 496px;
 	}
 
 	.tab-button {
@@ -881,6 +902,11 @@ div.bottom-links {
 	.cards-service {
 		min-height: 464px;
 	}
+	
+	.flip-card-front,
+	.flip-card-back {
+		min-height: 400px;
+	}
 
 	.bottom-links .tag {
 		font-size: 60px;
@@ -942,5 +968,52 @@ div.bottom-links {
 		bottom: 130px;
 		left: 779px;
 		transform: rotate(-45deg);
+	}
+}
+
+.flip-card {
+	position: relative;
+	perspective: 1000px;
+}
+
+.flip-card-inner {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	transition: transform 0.8s;
+	transform-style: preserve-3d;
+}
+
+.flip-card-front,
+.flip-card-back {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	backface-visibility: hidden;
+}
+
+.flip-card-back {
+	transform: rotateY(180deg);
+}
+
+@media (hover: hover) and (pointer: fine) {
+	.flip-card:hover .flip-card-inner {
+		transform: rotateY(180deg);
+	}
+
+	.flip-icon {
+		display: none;
+	}
+}
+
+@media (hover: none) and (pointer: coarse) {
+	.flip-icon {
+		position: absolute;
+		bottom: 10px;
+		right: 10px;
+		background: none;
+		border: none;
+		font-size: 24px;
+		cursor: pointer;
 	}
 }
