--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -75,7 +75,7 @@ a.navbar-item:hover {
 	color: #212121;
 }
 
-.cards-service {
+/* .cards-service {
 	background-color: #ffffff;
 	color: #212121;
 	border-radius: 32px;
@@ -84,7 +84,7 @@ a.navbar-item:hover {
 	width: 100%;
 	padding: 32px 32px 32px 40px;
 	position: relative;
-}
+} */
 
 .flip-card-front,
 .flip-card-back {
@@ -118,23 +118,11 @@ a.navbar-item:hover {
 	display: none;
 }
 
-.cards-service:hover {
+/* .cards-service:hover {
 	background-color: #4D8FC4;
 	border: 1px solid #4D8FC4;
 	transition: all .5s ease;
-}
-
-.cards-service a {
-	position: absolute;
-}
-
-.cards-service:hover a {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
+} */
 
 .cards-service:hover .cta>a,
 .cta>a {
@@ -546,9 +534,9 @@ div.bottom-links {
 		font-size: 2em;
 	}
 
-	.cards-service {
+	/* .cards-service {
 		padding: 16px 16px 16px 20px;
-	}
+	} */
 
 	.tab-content>div {
 		min-height: 568px;
@@ -869,7 +857,7 @@ div.bottom-links {
 	}
 
 	.tab-content>div {
-		min-height: 360px;
+		min-height: 408px;
 	}
 
 	.tab-content .flip-card-front,
@@ -1004,6 +992,7 @@ div.bottom-links {
 .flip-card {
 	position: relative;
 	perspective: 1000px;
+	min-height: 512px;
 }
 
 .flip-card-inner {
@@ -1020,10 +1009,20 @@ div.bottom-links {
 	width: 100%;
 	height: 100%;
 	backface-visibility: hidden;
+	background-color: #ffffff;
+	color: #212121;
+	border-radius: 32px;
+	border: 1px solid #212121;
+	min-height: 512px;
+	width: 100%;
+	padding: 32px 32px 32px 40px;
 }
 
 .flip-card-back {
 	transform: rotateY(180deg);
+	background-color: #4D8FC4;
+	border: 1px solid #4D8FC4;
+	transition: all .5s ease;
 }
 
 @media (hover: hover) and (pointer: fine) {
@@ -1096,4 +1095,22 @@ div.bottom-links {
 
 .flip-card .button:hover {
 	opacity: 1;
+}
+
+.feedback {
+	position: absolute;
+	bottom: 24px;
+	right: 24px;
+	background-color: #212121;
+	width: 36px;
+	height: 36px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	z-index: 2;
+	font-size: 24px;
+	line-height: 100%;
+	color: #ffffff;
 }
